tdf#127233: QR-code generator, use UTF-8 encoding

Thank you Mike Kaganski for reference here:
https://bugs.documentfoundation.org/show_bug.cgi?id=127233#c4

Change-Id: I01bbc408df8bc87cf4e8be52143efb9fc3fa1e38